// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Birre component should render correctly 1`] = `<div />`;

exports[`Home component should render correctly 1`] = `<div />`;

exports[`Inventario component should render correctly 1`] = `
<div>
  <table
    class="myTable"
  >
    <tr>
      <td>
        <div>
          <img
            class="inventoryImage"
            src="../../icons/inventory-icons/acqua.png"
          />
          <p
            class="inventoryText"
          >
            Acqua
          </p>
          <p
            class="inventoryText"
          >
            Disponibilità: 
            0
          </p>
        </div>
      </td>
      <td>
        <div>
          <img
            class="inventoryImage"
            src="../../icons/inventory-icons/additivi.png"
          />
          <p
            class="inventoryText"
          >
            Additivi
          </p>
          <p
            class="inventoryText"
          >
            Disponibilità: 
            0
          </p>
        </div>
      </td>
      <td>
        <div>
          <img
            class="inventoryImage"
            src="../../icons/inventory-icons/lievito.png"
          />
          <p
            class="inventoryText"
          >
            Lievito
          </p>
          <p
            class="inventoryText"
          >
            Disponibilità: 
            0
          </p>
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div>
          <img
            class="inventoryImage"
            src="../../icons/inventory-icons/luppoli.png"
          />
          <p
            class="inventoryText"
          >
            Luppoli
          </p>
          <p
            class="inventoryText"
          >
            Disponibilità: 
            0
          </p>
        </div>
      </td>
      <td>
        <div>
          <img
            class="inventoryImage"
            src="../../icons/inventory-icons/malto.png"
          />
          <p
            class="inventoryText"
          >
            Malto
          </p>
          <p
            class="inventoryText"
          >
            Disponibilità: 
            0
          </p>
        </div>
      </td>
      <td>
        <div>
          <img
            class="inventoryImage"
            src="../../icons/inventory-icons/zuccheri.png"
          />
          <p
            class="inventoryText"
          >
            Zuccheri
          </p>
          <p
            class="inventoryText"
          >
            Disponibilità: 
            0
          </p>
        </div>
      </td>
    </tr>
  </table>
</div>
`;

exports[`Ricette component should render correctly 1`] = `<div />`;

exports[`Spesa component should render correctly 1`] = `
<div>
  <table
    class="myTable"
  >
    <tr>
      <th>
        Foto prodotto
      </th>
      <th>
        Nome - Descrizione
      </th>
      <th>
        Quantità
      </th>
    </tr>
    <tr>
      <td>
        <img
          class="shoppingImage"
          src="../../icons/inventory-icons/acqua.png"
        />
      </td>
      <td>
        Acqua
      </td>
      <td>
        <div>
          <input
            data-testid="quantity-input"
            id="shoppingItemId"
            name="shoppingItemId"
            value=""
          />
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <img
          class="shoppingImage"
          src="../../icons/inventory-icons/additivi.png"
        />
      </td>
      <td>
        Additivi
      </td>
      <td>
        <div>
          <input
            data-testid="quantity-input"
            id="shoppingItemId"
            name="shoppingItemId"
            value=""
          />
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <img
          class="shoppingImage"
          src="../../icons/inventory-icons/lievito.png"
        />
      </td>
      <td>
        Lievito
      </td>
      <td>
        <div>
          <input
            data-testid="quantity-input"
            id="shoppingItemId"
            name="shoppingItemId"
            value=""
          />
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <img
          class="shoppingImage"
          src="../../icons/inventory-icons/luppoli.png"
        />
      </td>
      <td>
        Luppoli
      </td>
      <td>
        <div>
          <input
            data-testid="quantity-input"
            id="shoppingItemId"
            name="shoppingItemId"
            value=""
          />
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <img
          class="shoppingImage"
          src="../../icons/inventory-icons/malto.png"
        />
      </td>
      <td>
        Malto
      </td>
      <td>
        <div>
          <input
            data-testid="quantity-input"
            id="shoppingItemId"
            name="shoppingItemId"
            value=""
          />
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <img
          class="shoppingImage"
          src="../../icons/inventory-icons/zuccheri.png"
        />
      </td>
      <td>
        Zuccheri
      </td>
      <td>
        <div>
          <input
            data-testid="quantity-input"
            id="shoppingItemId"
            name="shoppingItemId"
            value=""
          />
        </div>
      </td>
    </tr>
  </table>
  <button
    id="shoppingBuyButton"
  >
    Compra
  </button>
</div>
`;
